--- a/dave_0.html
+++ b/dave_0.html
@@ -43,7 +43,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <A HREF="http://www.att.com/"> AT&T </A> --
 <A HREF="http://www.wireless.att.com/"> AT&T Wireless </A> --
 <A HREF="http://www.worldtimeserver.com/atomic-clock/"> Atomic clock sync </A> --
-<A HREF="http://www.jdbasementsystems.com/"> Basement waterproofing </A> --
+<A HREF="https://www.mybasementdoctor.com/"> Basement waterproofing </A> --
 <br>
 <A HREF="http://www.imgburn.com/"> ImgBurn </A> --
 <A HREF="http://www.carbonfootprint.com/"> Carbon footprint </A> --
@@ -58,7 +58,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <br>
 <A HREF="http://www.displayfusion.com/"> Display Fusion </A> --
 <A HREF="http://dl.tv/"> DL TV </A> --
-<A HREF="http://babgvant.com/files/folders/dvrmstoolbox/default.aspx"> DVRMSToolbox </A> --
+
 <A HREF="http://thundercloud.net/"> CLoudeight email stationary </A> --
 <br>
 <A HREF="http://www.famousbirthdays.com/"> Famous birthdays </A> --
@@ -68,7 +68,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <br>
 <A HREF="http://www.giganews.com/"> Giganews </A> --
 <A HREF="http://www.redytemp.com/"> Hot water recirculation </A> --
-<A HREF="http://www.itankless.com/"> Tankless hot water </A> --
+<A HREF="https://www.build.com/tankless-water-heaters/"> Tankless hot water </A> --
 <A HREF="http://www.ing.us"> ING financial </A> --
 <br>
 <A HREF="http://www.jjhuddle.com/"> JJ Huddle High School Sports </A> --
@@ -101,11 +101,10 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <A HREF="http://www.usnpl.com/ohnews.php"> Ohio newspapers </A> --
 <A HREF="http://www.statehouseshop.com/"> Ohio Statehouse shop </A> --
 <A HREF="http://www.onlineconversion.com/length_common.htm"> Online conversions </A> --
-<A HREF="http://www.ohionewsnow.com/ "> ONN </A> --
 <br>
 <A HREF="http://www.gcbl.org/food/other-ohio-open-air-and-farmers-markets "> Ohio open air & farmer's markets </A> --
 <A HREF="http://owenscorning.com/ "> Owens Corning </A> --
-<A HREF="http://www.phonenumber.com/ "> Phone number search </A> --
+
 <br>
 <A HREF="http://photobucket.com/ "> Photobucket </A> --
 <A HREF="http://www.steelers.com/"> Pittsburgh Steelers </A> --
@@ -113,11 +112,11 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <br>
 <A HREF="http://www.windowsmedia.com/Mediaguide/Radio "> Radio station guide </A> --
 <A HREF="http://www.wnxtradio.com/ "> Radio WNXT </A> --
-<A HREF="http://www.104wpay.com/ "> Radio WPAY </A> --
-<A HREF="http://www.wzzz.com/index.htm "> Radio WZZZ </A> --
+
+<A HREF="http://1075thebreeze.com/ "> Radio WZZZ </A> --
 <br>
 <A HREF="http://www.edmunds.com/insideline/do/Features/articleId=119349 "> Restoring Gen. Lee </A> --
-<A HREF="http://www.rr.com/ "> Roadrunner TWC </A> --
+
 <A HREF="http://www.sonyericsson.com/ "> Sony Ericsson </A> --
 <br>
 <A HREF="http://shop.usps.com/ "> Stamps - USPS </A> --
@@ -125,13 +124,13 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <A HREF="http://en.structurae.de/structures/data/index.cfm?ID=s0004784 "> US Grant bridge </A> --
 <A HREF="http://en.structurae.de/structures/data/index.cfm?ID=s0006346 "> Ironton-Russell bridge </A> --
 <br>
-<A HREF="http://www.timewarnercable.com/midohio/ "> Time Warner cable </A> --
+
 <A HREF="http://www.trugreen.com/ "> TruGreen lawn care </A> --
-<A HREF="http://partners.titantv.com/TTV/Grid/Grid.aspx "> TV- Titan TV listings </A> --
+<A HREF="https://www.titantv.com/default.aspx "> TV- Titan TV listings </A> --
 <A HREF="http://tv.yahoo.com/ "> TV - Yahoo TV listingsS </A> --
 <A HREF="http://www.ubuntu.com/ "> Ubuntu </A> --
 <br>
-<A HREF="http://www.microsoft.com/windows/products/winfamily/windowshomeserver/default.mspx "> Windows Home Server </A> --
+
 <A HREF="http://windows.microsoft.com/en-us/windows-live/essentials-home"> Windows Essentials </A> --
 <br>
 <A HREF="http://www.x10community.com/forums/index.php#2 "> X10 Community </A> --
