--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/ico" href="favicon.ico"></link>
   <link rel="shortcut icon" href="favicon.ico"></link>
 </HEAD>
-<!BODY bgcolor=lightgray>
+<!--BODY bgcolor=lightgray-->
 <BODY background="bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
 
 
@@ -27,21 +27,20 @@
 
     <TD WIDTH="50%" bgcolor=brown>
     <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every once in a while.
-    <IMG SRC="http://myplace.frontier.com/%7Eknorris06/webcam/webcam1.jpg"
-    WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
+      <IMG SRC="http://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
+      <!----> IMG SRC="http://myplace.frontier.com/%7Eknorris06/webcam/webcam1.jpg" WIDTH="320" HEIGHT="240" ALIGN="BOTTOM"-->
 
          
     <BR><FONT FACE=Arial Size=2>
-      <A HREF="http://myplace.frontier.com/~knorris06/webcam/cam.html"> Kevin's Byesville Cam</CENTER>
+              <A HREF="http://myplace.frontier.com/~knorris06/webcam/cam.html"> Kevin's Byesville Cam</CENTER>
   </TD>
   </TR>
   <TR>
 
     <TD WIDTH="50%" bgcolor=orange>
     <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates twice a year.
-    <!IMG SRC="http://home.columbus.rr.com/nnorris/webcam/webcam.jpg">
-    <IMG SRC="http://www.dnorris.net/webcam/testpat.jpg"
-    WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
+    <!--IMG SRC="http://home.columbus.rr.com/nnorris/webcam/webcam.jpg"-->
+    <IMG SRC="http://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
     <BR><FONT FACE=Arial Size=2>
       <A HREF="http://home.columbus.rr.com/nnorris/webcam/webcam.htm">Nelson's Marengo Cam</A></CENTER>
 
