--- a/dave_0.html
+++ b/dave_0.html
@@ -142,21 +142,23 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <A HREF="http://www.habitat.org/"> Habitat for Humanity </A> --
 <br>
 <A HREF="http://www.adamscountytravel.org/"> Adams County, OH </A> --
-<A HREF="http://www.browncountytourism.com/"> Brown County,OH </A> --
+<A HREF=""> Brown County,OH </A> --
 <A HREF="http://www.highlandcounty.com/"> Highland County, OH </A> --
 <A HREF="http://www.jacksoncountyohio.org/"> Jackson County, Oh </A> --
 <br>
 <A HREF="http://www.lawrencecountyohio.org/"> Lawrence County, OH </A> --
 <A HREF="http://www.piketravel.com/"> Pike County, OH </A> --
-<A HREF="http://www.visithistory.com/"> Ross County, OH </A> --
-<A HREF="http://www.portsmouthcvb.org/"> Scioto County, OH </A> --
+<A HREF="http://www.co.ross.oh.us/"> Ross County, OH </A> --
+<A HREF="http://sciotocountydirectory.net/scodc/"> Scioto County, OH </A> --
+
 <br>
 <A HREF="http://www.tecumsehdrama.com/"> Tecumseh outdoor drama </A> --
-<A HREF="http://www.ohgrapes.org/"> Ohio grapes </A> --
+
 <A HREF="http://www.mariettaohio.org/"> Marietta, OH </A> --
 <A HREF="http://www.historicbyway.com/"> Lincoln Highway </A> --
 <br>
-<A HREF="http://www.belmontcountytourism.org/"> Belmont County, OH </A> --
+<A HREF=""> Belmont County, OH </A> --
+
 <A HREF="http://www.put-in-bay.com/"> Put-in-Bay, OH </A> --
 <A HREF="http://www.long-weekends.com/"> Longweekends Mag </A> --
 <br>
@@ -166,32 +168,32 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <br>
 <A HREF="http://www.century21.com/buy/buy_results.aspx?type=R&company_id=210263"> Century21 Portsmouth </A> -- 
 <A HREF="http://www.realtor.com/greaterportsmouth/"> Realtor.com Portsmouth </A> -- 
-<A HREF="http://s11.yousendit.com/"> You Send It (big files) </A> -- 
+
 <A HREF="http://www.moreroomforliving.com/"> Owens Corning basement finish </A> -- 
 <br>
 <A HREF="http://www.fhwa.dot.gov/"> FHWA </A> --
 <A HREF="http://www.byways.org/"> Scenic Byways </A> --
 <A HREF="http://store.yahoo.com/newsomscountryham/newsoldmilst.html"> Newsom's Country Store </A> --
-<A HREF="http://www.ohiobarns.com/ohbarns/index.html"> Ohio Bicentennial Barns </A> --
+<A HREF=""> Ohio Bicentennial Barns </A> --
 <br>
-<A HREF="http://ohiostate.bkstore.com/"> OSU / Longs Bookstore </A> --
+<A HREF=""> OSU / Longs Bookstore </A> --
 <A HREF="http://www.buckeyecorner.com/"> Buckeye Corner </A> --
 <A HREF="http://www.collegetraditions.com/"> College Traditions </A> --
-<A HREF="http://www.conrads.com/"> Conrads </A> --
+
 <A HREF="http://www.buckeyemall.com/"> Buckeye Mall </A> --
 <br>
-<A HREF="http://allamericancollegejerseys.com/ohio-state-buckeyes.html/"> All-American Jerseys </A> --
+
 <A HREF="http://www.sportsfanoutlet.com/"> Sportsfan Outlet </A> --
 <A HREF="http://www.eastbay.com/"> East Bay </A> --
 <A HREF="http://www.1460thefan.com/"> 1460 AM The Fan </A> --
-<A HREF="http://buckeyeclassics.com/"> Buckeye classics </A> --
+
 <br>
-<A HREF="http://www.hangonsloopy.com/"> Hang on Sloopy store </A> --
+<A HREF="https://shop.ohiostatebuckeyes.com/"> Ohio State Buckeyes store </A> --
 <A HREF="http://www.ebuckeye.com/"> eBuckeye </A> --
 <A HREF="http://www.lorrie.com/"> Lorrie Morgan </A> --
-<A HREF="http://www.e-mailanywhere.com/"> Email from anywhere </A> --
+
 <br>
-<A HREF="http://www.portsmouthbypass.com/"> Portsmouth Bypass </A> --
+
 <A HREF="http://www.samspade.org/"> Sam Spade Internet tools </A> --
 <A HREF="http://www.pcflank.com/"> PC Flank leaktest </A> --
 <br>
@@ -207,41 +209,31 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <br>
 <A HREF="http://cam-i.switch.ch/login.cgi?b=j&ch=1&l=0"> Zurich Live Cam </A> --
 <A HREF="http://www.ohgo.com/"> ODOT Columbus Live Cams </A> --
-<A HREF="http://www.rt66.com/~ozone/cam.htm"> Tommy's list of Live Cams </A> --
+
 <br>
 <A HREF="http://www.fazolis.com/"> Fazoli's Restaurant </A> --
 <A HREF="http://www.bobevans.com/"> Bob Evans Restaurant</A> --
-<A HREF="http://www.kokosing-inc.com/"> Kokosing Construction </A> --
+
 <A HREF="http://www.microcenter.com/"> MicroCenter </A> --
-<A HREF="http://www.bridgepros.com/"> Bridge Pros </A> --
+
 <br>
 <A HREF="http://www.betanews.com/"> Windows Beta News </A> --
 <A HREF="http://www.aumha.org/"> Windows Support Center </A> --
 <A HREF="http://www.personalcreations.com/"> Personal creations </A> --
 <A HREF="http://www.outpost.com/"> Fry's Outpost </A> --
-<br>
-<A HREF="http://www.thayerbirding.com/"> Thayer birding </A> --
-<A HREF="http://www.wildbirds.com/"> WildBirds.com </A> --
-<A HREF="http://www.enature.com/"> eNature </A> --
-<A HREF="http://www.naturesound.com/"> NatureSound </A> --
-<br>
-<A HREF="http://www.owlpages.com/"> Owl Pages </A> --
-<A HREF="http://www.birdwatchersdigest.com/"> BirdWatchers Digest </A> --
-<A HREF="http://www.ornithology.com/"> Ornithology.com </A> --
-<A HREF="http://www.birding.com/"> Birding.com </A> --
-<A HREF="http://birds.cornell.edu/"> Cornell U. Birds </A> --
+
 <br>
 <A HREF="http://water.usgs.gov/realtime.html"> USGS water data </A> --
 <A HREF="http://www.freeality.com/findet.htm"> Find anything </A> --
 <A HREF="http://www.onegreatfamily.com/"> One Great Family - gen </A> --
 <br>
-<A HREF="http://www.amishshoppingmall.com/"> Amish shopping mall </A> --
+
 <A HREF="http://www.monroecountyohio.net/"> Monroe County, OH </A> --
-<A HREF="http://www.monroecountybeacononline.com/"> Monroe County Beacon </A> --
+<A HREF="https://www.mcbeacon.com/"> Monroe County Beacon </A> --
 <A HREF="http://www.wheresgeorge.com/"> Where's George bill tracker </A> --
 <A HREF="http://www.wishbook.com/shop/catalog.asp/"> Sears Wishbook </A> --
 <br>
-<A HREF="http://www.health-watch.com/"> Health Watch </A> --
+
 <A HREF="http://www.pridemobility.com/"> Pride Mobility (scooters) </A> --
 <br>
 <A HREF="http://www.wyomingbuffalocompany.com/"> WY Buffalo Co. </A> --
@@ -254,10 +246,10 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <A HREF="http://www.auditor.state.oh.us/"> Auditor of Ohio </A> --
 <br>
 <A HREF="http://www.placesnamed.com/"> Places named.. </A> --
-<A HREF="http://www.lauriefranks.com/"> Laurie Franks </A> --
-<A HREF="http://www.gbgm-umc.org/lucasville-oh/"> Emmanuel U Methodist Church, Lucasville, Oh </A> --
+
+<A HREF=""> Emmanuel U Methodist Church, Lucasville, Oh </A> --
 <A HREF="http://shop.usps.com/webapp/wcs/stores/servlet/TopCategoriesDisplay?storeId=10001&catalogId=10152"> Buy postage stamps </A> --
-<A HREF="http://www.discoveringthe6.com/"> Discovering US Route 6 </A> --
+
 <br>
 <A HREF="http://www.84lumber.com/"> 84 Lumber </A> --
 <A HREF="http://www.tangeroutlet.com/jeffersonville"> Jeffersonville Outlet Malls </A> --
@@ -266,25 +258,22 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <A HREF="http://www.freewarehome.com/"> Freeware Home </A> --
 <br>
 <A HREF="http://www.geniecompany.com/"> Genie Garage Door Openers, etc.</A> --
-<A HREF="http://www.netacs.net/"> Armstrong Cable Services </A> --
+
 <A HREF="http://mutcd.fhwa.dot.gov/"> MUTCD </A> --
 <br>
 <A HREF="http://www.majesticamericaline.com/products/Ship.aspx?ID=2"> Delta Queen Cruises </A> --
 <A HREF="http://www.roscoevillage.com/"> Roscoe Village </A> --
-<A HREF="http://www.loudonville-mohican.com/"> Mohican </A> --
+
 <A HREF="http://www.wrhs.org/"> Hale Farm & Village </A> --
 <br>
-<A HREF="http://www.interstate66.com/"> New KY I-66 </A> --
-<A HREF="http://www.i-70.org/"> I-70 construction </A> --
-<A HREF="http://www.i-71.org/"> I-71 construction </A> --
-<br>
+
 <A HREF="http://www.autotrader.com/"> Auto Trader </A> --
 <A HREF="http://www.webtrends.com/"> Webtrends </A> --
 <A HREF="http://www.calendar.yahoo.com/"> Yahoo Calendar </A> --
 <br>
 <A HREF="http://www.wireless.att.com"> AT&T Wireless </A> --
 <A HREF="http://www.discountcell.com/"> Discount Cell phone </A> --
-<A HREF="http://www.sprintpcs.com/"> Sprint PCS </A> --
+<A HREF="http://www.sprint.com/"> Sprint PCS </A> --
 <A HREF="http://www.uscc.com"> US Cellular </A> --
 <A HREF="http://www.verizonwireless.com"> Verizon Wireless </A> --
 <br>
@@ -293,8 +282,8 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <A HREF="http://www.towerhobbies.com/"> Tower Hobbies </A> --
 <A HREF="http://www.lionel.com/">Lionel Hobbies </A> --
 <br>
-<A HREF="http://www.botweb.com/"> Best Of The Web </A> --
-<A HREF="http://www.batteries.com/"> Batteries.com </A> --
+
+
 <A HREF="http://www.cvs.com/"> CVS/Pharmacy </A> --
 <A HREF="http://www.riteaid.com/"> Rite Aid Pharmacy </A> --
 <br>
