--- a/dave_4.html
+++ b/dave_4.html
@@ -19,6 +19,17 @@
 <br>
 <A href="http://www.npwrc.usgs.gov/resource/birds/chekbird/index.htm"> Birding Checklists </A> --
 <A href="http://www.bcpl.lib.md.us/~tross/baltbird.html"> Balt.Bird Club </A> --
+<br>
+<A HREF="http://www.thayerbirding.com/"> Thayer birding </A> --
+<A HREF="http://www.wildbirds.com/"> WildBirds.com </A> --
+<A HREF="http://www.enature.com/"> eNature </A> --
+<A HREF="http://www.naturesound.com/"> NatureSound </A> --
+<br>
+<A HREF="http://www.owlpages.com/"> Owl Pages </A> --
+<A HREF="http://www.birdwatchersdigest.com/"> BirdWatchers Digest </A> --
+<A HREF="http://www.ornithology.com/"> Ornithology.com </A> --
+<A HREF="http://www.birding.com/"> Birding.com </A> --
+<A HREF="http://birds.cornell.edu/"> Cornell U. Birds </A> --
 </p><hr size=3 width=50%>
 
 <!---------------------->
@@ -26,7 +37,7 @@
 <A HREF="http://www.atari.com"> Atari </A> --
 <A HREF="http://www.sega.com"> Sega </A> --
 <br>
-<A HREF="http://www.batteries.com"> Batteries </A> --
+
 <A HREF="http://www.avery.com"> Avery Labels </A> --
 <A HREF="http://www.lucent.com"> Lucent Tech. </A> --
 <A HREF="http://www.goodyeartires.com/index"> Goodyear Tires </A> --
@@ -50,14 +61,7 @@
 <A href="http://www.twa.com"> Trans World Airlines </A> --
 <A href="http://www.ual.com"> United Airlines </A>
 <br>
-<A href="http://www2.kelloggs.com/"> Kelloggs </A> --
-<A href="http://www.baking.m-ms.com"> M & M </A> --
-<A href="http://www.pizzahut.com"> Pizza Hut </A>
-<br>
-<A href="http://www.7up.com"> 7 UP </A> --
-<A href="http://www.pepsi.com"> Pepsi </A> --
-<A href="http://www.cocacola.com"> Coke </A>
-<br>
+
 <A href="http://www.supermall.com"> Super Mall </A> --
 <A href="http://www.mall2000.com"> Mall 2000 </A> --
 <A href="http://mall.compuserve.com"> CompuServe Mall </A> --
@@ -70,7 +74,7 @@
 <A href="http://www.lowes.com/"> Lowes </A> --
 <A href="http://www.kmart.com/"> Kmart </A> --
 <A href="http://www.CellularOne.com/"> Cellular One </A> --
-<A href="http://www.subway.com"> Subway </A>
+
 <br>
 <A href="http://www.pictureweb.com"> PictureWeb </A> --
 <A href="http://www.filmworks.com"> Seattle Filmworks </A> --
@@ -122,7 +126,7 @@
 <br>
 <A HREF="http://www.livebyrequest.com"> Live by Request </A> --
 <A href="http://www.connectik.fr"> French Cafe </A> --
-<A href="http://www.msnbc.com"> MSNBC news </A> --
+
 <A href="http://www.rodney.com"> Rodney Dangerfield </A>
 <br>
 <A href="http://www.disney.com/"> Disney </A> -- 
@@ -157,6 +161,15 @@
 <A HREF="http://www.french-bakery.com"> Sourdough French Bread </A> --
 <A HREF="http://www.io.com/~sjohn/sour.htm"> SourDough Bread </A> --
 <A HREF="http://www.menusonline.com"> Menus Online </A> --
+<A href="http://www2.kelloggs.com/"> Kelloggs </A> --
+<A href="http://www.baking.m-ms.com"> M & M </A> --
+<A href="http://www.pizzahut.com"> Pizza Hut </A>
+<br>
+<A href="http://www.7up.com"> 7 UP </A> --
+<A href="http://www.pepsi.com"> Pepsi </A> --
+<A href="http://www.cocacola.com"> Coke </A>
+<A href="http://www.subway.com"> Subway </A>
+<br>
 </p><hr size=3 width=50%>
 
 <!---------------------->
@@ -208,7 +221,7 @@
 <br>
 <A HREF="http://www.pointcast.com"> Pointcast News </A> --
 <A HREF="http://www.winsources.com"> Windows Sources Mag </A> --
-<A HREF="http://www.nightlynews.msnbc.com"> MSNBC Nightly News </A>
+
 <br>
 <A HREF="http://www.knoxnews.com"> Knoxville News-Sentinel </A> --
 <A HREF="http://www.outwestnewspaper.com"> Out West Newspaper </A> --
@@ -256,7 +269,7 @@
 <A href="http://www.wlwt.com"> Cincy TV 5 </A> --
 <A href="http://www.discovery.com"> Discovery Channel </A> --
 <A href="http://www.travelchannel.com"> The Travel Channel </A> --
-<A href="http://www.cnn.com"> CNN Online </A>
+
 <br>
 <A href="http://www.aetv.com"> A & E TV </A> --
 <A href="http://www.mca.com"> MCA </A> --
@@ -268,7 +281,7 @@
 <A href="http://www.cbs.com"> CBS </A> --
 <A href="http://www.pbs.org"> PBS </A> --
 <A href="http://www.nbc.com"> NBC </A> --
-<A href="http://www.c-span.org"> C-Span </A>
+
 <br>
 <A href="http://www.nbctonightshow.com/" > Tonight Show with Jay Leno</A> --
 <A href="http://www.cbs.com/lateshow/"> David Letterman </A> --
