--- a/dave_4.html
+++ b/dave_4.html
@@ -155,7 +155,7 @@
 <A href="http://www.whitecastle.com"> White Castle </A>
 <br>
 <A HREF="http://www.bakeoff.com/"> Pillsbury </A> --
-<A HREF="http://www.honeysucklewhite.com/"> Honeysuckle Turkey </A>
+<A HREF="http://www.honeysucklewhite.com/"> Honeysuckle Turkey </A> --
 <A HREF="http://www.snax.com/" > Snacks </A> 
 <br>
 <A HREF="http://www.french-bakery.com"> Sourdough French Bread </A> --
@@ -167,7 +167,7 @@
 <br>
 <A href="http://www.7up.com"> 7 UP </A> --
 <A href="http://www.pepsi.com"> Pepsi </A> --
-<A href="http://www.cocacola.com"> Coke </A>
+<A href="http://www.cocacola.com"> Coke </A> --
 <A href="http://www.subway.com"> Subway </A>
 <br>
 </p><hr size=3 width=50%>
