--- a/dave_2.html
+++ b/dave_2.html
@@ -144,7 +144,7 @@
 <A HREF="http://www.theplumber.com"> The Plumber </A> --
 <A HREF="http://www.bobvila.com"> Bob Vila </A> --
 <br>
-<A HREF="http://www.cubcadet.com"> <img src="Images/snowblow.gif"> Cub Snow Thrower </A> --
+<A HREF="http://www.cubcadet.com"> Cub Snow Thrower </A> --
 <A HREF="http://www.jacobsen.com"> Jacobsen </A> --
 <A HREF="http://www.deere.com"> John Deere </A> --
 <A HREF="http://www.newholland.com"> New Holland </A> --
