--- a/dave_0.html
+++ b/dave_0.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/ico" href="favicon.ico"></link>
   <link rel="shortcut icon" href="favicon.ico"></link>
  </HEAD>
-<BODY  background="Images/bg-bkgrd.gif" bgproperties="fixed" onLoad="startclock()">
+<BODY  background="Images/bg-bkgrd.gif" bgproperties="fixed" ">
 <center>
 <p>
 <!-- LAST MODIFIED DATE -->
