--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -18,21 +18,21 @@
 
     <TD WIDTH="50%" bgcolor=red>
     <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes
-    <IMG SRC="http://www.dnorris.net/webcam/webcam.jpg"
+    <IMG SRC="https://www.dnorris.net/webcam/webcam.jpg"
     WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
          
     <BR><FONT FACE=Arial Size=2>
-    <A HREF="http://www.dnorris.net/webcam/webcam.jpg">Dave's Lucasville Cam</A></CENTER>
+    <A HREF="https://www.dnorris.net/webcam/webcam.jpg">Dave's Lucasville Cam</A></CENTER>
     </TD>
 
     <TD WIDTH="50%" bgcolor=brown>
     <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every once in a while.
-      <IMG SRC="http://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
+      <IMG SRC="https://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
       <!----> IMG SRC="http://myplace.frontier.com/%7Eknorris06/webcam/webcam1.jpg" WIDTH="320" HEIGHT="240" ALIGN="BOTTOM"-->
 
          
     <BR><FONT FACE=Arial Size=2>
-              <A HREF="http://myplace.frontier.com/~knorris06/webcam/cam.html"> Kevin's Byesville Cam</CENTER>
+              <A HREF="https://myplace.frontier.com/~knorris06/webcam/cam.html"> Kevin's Byesville Cam</CENTER>
   </TD>
   </TR>
   <TR>
@@ -40,18 +40,18 @@
     <TD WIDTH="50%" bgcolor=orange>
     <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates twice a year.
     <!--IMG SRC="http://home.columbus.rr.com/nnorris/webcam/webcam.jpg"-->
-    <IMG SRC="http://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
+    <IMG SRC="https://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
     <BR><FONT FACE=Arial Size=2>
-      <A HREF="http://home.columbus.rr.com/nnorris/webcam/webcam.htm">Nelson's Marengo Cam</A></CENTER>
+      <A HREF="https://home.columbus.rr.com/nnorris/webcam/webcam.htm">Nelson's Marengo Cam</A></CENTER>
 
     </TD>
 
     <TD WIDTH="50%" bgcolor=blue>
     <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates once in a blue moon.
-    <IMG SRC="http://home.netcom.com/~dnorris/cam/webcam.jpg"
+    <IMG SRC="https://home.netcom.com/~dnorris/cam/webcam.jpg"
     WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM"><BR>
     <FONT FACE=Arial Size=2>
-    <A HREF="http://home.netcom.com/~dnorris/cam/webcam.html">Dennis' MD Cam</A></CENTER></TD>
+    <A HREF="https://home.netcom.com/~dnorris/cam/webcam.html">Dennis' MD Cam</A></CENTER></TD>
   </TR>
 </TABLE><BR>
 
