--- a/bath.html
+++ b/bath.html
@@ -1,145 +1,133 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN" "html.dtd">
 <HTML>
 <HEAD>
-<TITLE>Dr Dave's New Bathrooms </TITLE>
-<META NAME="keywords" CONTENT="Norris Links Lucasville Ohio">
-<META NAME="description" CONTENT="Daves Favorite New Links">
-<!---------------->
+ <TITLE>Dr Dave's New Bathrooms </TITLE>
+ <META NAME="keywords" CONTENT="Norris Links Lucasville Ohio">
+ <META NAME="description" CONTENT="Daves Favorite New Links">
+ <style>
+  h1 {text-align:center;}
+  p  {text-align:center;}
+  </style>
+ <!---------------->
 </HEAD>
 <BODY background="Images/bg-bkgrd.gif" BGCOLOR="#A4C8F0" >
-<center>
+
 <!-- LAST MODIFIED DATE -->
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
-</SCRIPT> </center>
-<H1><CENTER> the Norris Bathroom Remodel </CENTER></H1>
-<hr size=3 width=90%> 
+</SCRIPT>
+<H1>the Norris Bathroom Remodel </H1>
+<hr size=3 width=50%> 
 
-
-<p align=center> 
+<p> 
 April 17, 2001   Out with the old... demolition time!
 <p>
-<hr size=3 width=90%> 
 <p align=center><img src="bath/r0100313.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100314.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100317.jpg">
 <hr size=3 width=90%> 
 
-<p align=center> 
+<p> 
 April 18  New framing goes up...
 <p>
-<hr size=3 width=90%> 
 <p align=center><img src="bath/r0100316.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100318.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100319.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100320.jpg">
 <hr size=3 width=90%> 
 
-<p align=center> 
+<p> 
 April 20  New shower stall
 <p>
-<hr size=3 width=90%> 
 <p align=center><img src="bath/tubview.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100321.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100325.jpg">
 <hr size=3 width=90%> 
 
-<p align=center> 
+<p> 
 April 23  New shower grab bars
 <p>
-<hr size=3 width=90%> 
 <p align=center><img src="bath/r0100337.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100338.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100341.jpg">
 <hr size=3 width=90%> 
 
-<p align=center> 
+<p> 
 April 26  New drywall and door
 <p>
-<hr size=3 width=90%> 
 <p align=center><img src="bath/showerdrywall.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100343.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100344.jpg">
 <hr size=3 width=90%> 
 
-<p align=center> 
+<p> 
 April 27  New sink and toilet
 <p>
-<hr size=3 width=90%> 
 <p align=center><img src="bath/r0100350.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100351.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100352.jpg">
 <hr size=3 width=90%> 
-
-<p align=center> 
+<p > 
 April 30  New showerhead and work in half bath
 <p>
-<hr size=3 width=90%> 
 <p align=center><img src="bath/r0100356.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100354.jpg">
 <hr size=3 width=90%> 
 
-<p align=center> 
+<p> 
 May 03, 2001
 <p>
+<p align=center><img src="bath/r0100357.jpg"> <p> commode & sink are usable
 <hr size=3 width=90%> 
-<p align=center><img src="bath/r0100357.jpg"> commode & sink are usable
+<p align=center><img src="bath/r0100358.jpg"> <p> new grab bars
+<hr size=3 width=50%> 
+<p align=center><img src="bath/r0100359.jpg"> <p> new switch
+<hr size=3 width=50%> 
+<p align=center><img src="bath/r0100360.jpg"> <p> new HVAC outlet
+<hr size=3 width=50%> 
+<p align=center><img src="bath/r0100361.jpg"> <p> Vanity in half bath
 <hr size=3 width=90%> 
-<p align=center><img src="bath/r0100358.jpg"> new grab bars
-<hr size=3 width=90%> 
-<p align=center><img src="bath/r0100359.jpg"> new switch
-<hr size=3 width=90%> 
-<p align=center><img src="bath/r0100360.jpg"> new HVAC outlet
-<hr size=3 width=90%> 
-<p align=center><img src="bath/r0100361.jpg">Vanity in half bath
-<hr size=3 width=90%> 
-<p align=center> 
+<p> 
 May 06, 2001
 <p>
+<p align=center><img src="bath/r0100365.jpg"> <p> putting up shelves
 <hr size=3 width=90%> 
-<p align=center><img src="bath/r0100365.jpg"> putting up shelves
+<p align=center><img src="bath/r0100363.jpg"> <p> half-bath nearly done
 <hr size=3 width=90%> 
-<p align=center><img src="bath/r0100363.jpg"> half-bath nearly done
-<hr size=3 width=90%> 
-<p align=center> 
+<p> 
 May 08, 2001
 <p>
-<hr size=3 width=90%> 
-<p align=center><img src="bath/r0100367.jpg"> Building front ramp
-<hr size=3 width=90%> 
+<p align=center><img src="bath/r0100367.jpg"> <p> Building front ramp
+<hr size=3 width=50%> 
 <p align=center><img src="bath/r0100366.jpg">
 <hr size=3 width=90%> 
 <p>May 09, 2001
+<p align=center><img src="bath/r0100368.jpg"> <p> finished main bath
+<hr size=3 width=50%> 
+<p align=center><img src="bath/r0100372.jpg"> <p> finished half-bath
+<hr size=3 width=50%> 
+<p align=center><img src="bath/r0100374.jpg"> <p> front ramp
+<hr size=3 width=50%> 
+<p align=center><img src="bath/r0100376.jpg"> <p> back ramp
 <hr size=3 width=90%> 
-<p align=center><img src="bath/r0100368.jpg"> finished main bath
-<hr size=3 width=90%> 
-<p align=center><img src="bath/r0100372.jpg"> finished half-bath
-<hr size=3 width=90%> 
-<p align=center><img src="bath/r0100374.jpg"> front ramp
-<hr size=3 width=90%> 
-<p align=center><img src="bath/r0100376.jpg"> back ramp
-<hr size=3 width=90%> 
-<center>Finished! </center>
+<p> Finished!</p>
 <br>
-
 <hr size=3 width=90%> 
-
 <!----------------------->
-
 </BODY>
 </HTML>
