--- a/sunroom.html
+++ b/sunroom.html
@@ -1,87 +1,61 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN" "html.dtd">
 <HTML>
 <HEAD>
-<TITLE>4-Seasons Sunroom </TITLE>
-<META NAME="keywords" CONTENT="Norris Links Lucasville Ohio">
-<META NAME="description" CONTENT="Daves Favorite New Links">
-<!---------------->
+ <TITLE>4-Seasons Sunroom </TITLE>
+ <META NAME="keywords" CONTENT="Norris Links Lucasville Ohio">
+ <META NAME="description" CONTENT="Daves Favorite New Links">
+ <style>
+     h1 {text-align:center;}
+     p  {text-align:center;}
+ </style>
+ <!---------------->
 </HEAD>
 <BODY  background="Images/bg-bkgrd.gif" BGCOLOR="#A4C8F0" >
-<center>
+
 <!-- LAST MODIFIED DATE -->
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
-</SCRIPT> </center>
-<H1><CENTER> the Norris 4-Seasons Sunroom </CENTER></H1>
-<hr size=3 width=90%> 
-
-<p align=center> 
+</SCRIPT> 
+<H1> the Norris 4-Seasons Sunroom </H1>
+<hr size=3 width=50%> 
+<p> 
 Day 1 - the deck is modified
-<a href="sunroom/sunrm-a.jpg"><img src="sunroom/sra.jpg" ></A>
-<!img height="200" width="320" src="sunroom/sunrm-a.jpg" "alt=Deck" >
-
-<p align=center> 
+<a href="sunroom/sunrm-a.jpg"><img src="sunroom/sra.jpg" ></A> click photo for a larger view
+<p> 
 Day 2 - Most of the frame is up
 <a href="sunroom/sunrm-b.jpg"><img src="sunroom/srb.jpg" ></A>
-<!img height="200" width="320" src="sunroom/sunrm-b.jpg" "alt=Dave & Deb in sunroom" >
-
-<p align=center> 
+<p> 
 Day 3 - Completed (outside)
 <a href="sunroom/sunrm-c.jpg"><img src="sunroom/src.jpg" ></A>
-<!img src="sunroom/src.jpg" "alt=Dave & Deb in sunroom" >
-<!img height="200" width="320" src="sunroom/sunrm-c.jpg" "alt=Dave & Deb in sunroom" >
-
-<p align=center> 
+<p> 
 Inside still needs carpet 
 <a href="sunroom/sunrm-d.jpg"><img src="sunroom/srd.jpg" ></A>
-<!img src="sunroom/srd.jpg" "alt=Dave & Deb in sunroom" >
-<!img height="200" width="320" src="sunroom/sunrm-d.jpg" "alt=Dave & Deb in sunroom" >
-
-<p align=center> 
+<p> 
 Daniel finds a bird in the bush
 <a href="sunroom/sunrm-e.jpg"><img src="sunroom/sre.jpg" ></A>
-<!img src="sunroom/sre.jpg" "alt=Dave & Deb in sunroom" >
-<!img height="200" width="320" src="sunroom/sunrm-e.jpg" "alt=Dave & Deb in sunroom" >
-
-<p align=center> 
+<p> 
 Buffy gets in the act 
 <a href="sunroom/sunrm-ddd.jpg"><img src="sunroom/srddd.jpg" ></A>
-<!img src="sunroom/srddd.jpg" "alt=Dave & Deb in sunroom" >
-<!img height="200" width="300" src="sunroom/sunrm-ddd.jpg" "alt=Dave, Deb & Daniel in sunroom" border=0>
-
-<p align=center> 
+<p> 
 Employee of the Month & First Lady 1997
 <a href="sunroom/sunrm-dd.jpg"><img src="sunroom/srdd.jpg" ></A>
-<!img src="sunroom/srdd.jpg" "alt=Dave & Deb in sunroom" >
-<!img height="200" width="320" src="sunroom/sunrm-dd.jpg" "alt=Dave & Deb in sunroom" >
-
-<hr size=3 width=90%> 
-<p align=center> 
+<hr size=3 width=50%> 
+<p> 
 Nov 2000 
 <a href="sunroom/sunrm1100.jpg"><img src="sunroom/sunrm1100s.jpg" ></A>
-
-<hr size=3 width=90%> 
-
-<p align=center> 
+<hr size=3 width=50%> 
+<p> 
 Dec 2001 
 <a href="sunroom/sunrm1201.jpg"><img src="sunroom/sunrm1201s.jpg" ></A>
-
-<hr size=3 width=90%> 
- 
-<p align=center> 
+<hr size=3 width=50%> 
+ <p> 
 Jan 2003 
 <a href="sunroom/sunrm0103.jpg"><img src="sunroom/sunrm0103s.jpg" ></A>
-
-<hr size=3 width=90%> 
-
+<hr size=3 width=50%> 
 </p>
 <br>
-
-<hr size=3 width=90%> 
-
 <!----------------------->
-
 <!---- Remove the following before uploading to Zoomnet --->
 <!---- end remove ------------------->
 </BODY>
