--- a/dave_0.html
+++ b/dave_0.html
@@ -6,7 +6,14 @@
   <META NAME="description" CONTENT="Daves Favorite New Links">
   <link rel="icon" type="image/ico" href="favicon.ico"></link>
   <link rel="shortcut icon" href="favicon.ico"></link>
- </HEAD>
+  <SCRIPT language="JavaScript">
+    function navigate(form) 
+    {
+     var go = (form.linkList.options[form.linkList.selectedIndex].value);
+     document.location.href=go;
+    }
+  </SCRIPT> 
+</HEAD>
 <BODY  background="Images/bg-bkgrd.gif" bgproperties="fixed" ">
 <center>
 <p>
@@ -17,6 +24,16 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 </SCRIPT> </p>
 
 <H1> Dr Dave's Favorite Pages</H1>
+<p align=center>  Go to:  
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_1.html">  Page 1 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_2.html">  Page 2 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_3.html">  Page 3 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_4.html">  Page 4 </A>
+</p>
 <hr size=3 width=50%> 
 <br>
 <A HREF="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KOHLUCAS2 "> Dave's WeatherUnderGround station </A> --
@@ -1117,13 +1134,13 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <h2>Please try these links: </h2>
 <h3>
-<p> <a href="dave_1.html"> Computer Hardware, Software, Shopping, ISPs, Search the Internet </a></p>
+<p> <a href="dave_1.html"> 1. Computer Hardware, Software, Shopping, ISPs, Search the Internet </a></p>
 <br>
-<p> <a href="dave_2.html"> Autos, Engineering, CADD, Highways, Home Improvement & Maintenance </a></p>
+<p> <a href="dave_2.html"> 2. Autos, Engineering, CADD, Highways, Home Improvement & Maintenance </a></p>
 <br>
-<p> <a href="dave_3.html"> Education, Finance, Genealogy, Government, Medicine, Miscellaneous </a></p>
+<p> <a href="dave_3.html"> 3. Education, Finance, Genealogy, Government, Medicine, Miscellaneous </a></p>
 <br>
-<p> <a href="dave_4.html"> Birds, Commercial, Entertainment, Food, Media, Sports, Television, Weather, Travel </a></p>
+<p> <a href="dave_4.html"> 4. Birds, Commercial, Entertainment, Food, Media, Sports, Television, Weather, Travel </a></p>
 </h3>
 <hr size=3 width=50%>
 <table border="1">
@@ -1141,25 +1158,25 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 </tr>
 </table>
 .... remember, <font face="Symbol"> p </font>are round, Cornbread are square.
-
+<p></p>
 <font color="blue">
 Where do you want to go?
 <FORM METHOD=POST>
-<SELECT NAME="linkList">
-<OPTION value="http://www.google.com"> Google
-<OPTION value="http://www.bigfoot.com"> BigFoot
-<OPTION value="http://www.hotbot.com"> HotBot
-<OPTION value="http://www.lycos.com"> Lycos
-<OPTION value="http://www.webcrawler.com"> Web Crawler
-<OPTION value="http://www.whowhere.com"> Who Where
-<OPTION value="http://www.yahoo.com"> Yahoo
-<OPTION value="dave_1.html"> Dave_1
-<OPTION value="dave_2.html"> Dave_2
-<OPTION value="dave_3.html"> Dave_3
-<OPTION value="dave_4.html"> Dave_4
-</SELECT>
-&nbsp;
-<INPUT type ="button" NAME="GO" VALUE="Click to go" onClick="navigate(this.form)">
+ <SELECT NAME="linkList">
+    <OPTION value="http://www.google.com"> Google
+    <OPTION value="http://www.bigfoot.com"> BigFoot
+    <OPTION value="http://www.hotbot.com"> HotBot
+    <OPTION value="http://www.lycos.com"> Lycos
+    <OPTION value="http://www.webcrawler.com"> Web Crawler
+    <OPTION value="http://www.whowhere.com"> Who Where
+    <OPTION value="http://www.yahoo.com"> Yahoo
+    <OPTION value="dave_1.html"> Dave_1
+    <OPTION value="dave_2.html"> Dave_2
+    <OPTION value="dave_3.html"> Dave_3
+    <OPTION value="dave_4.html"> Dave_4
+    </SELECT>
+ &nbsp;
+ <INPUT type ="button" NAME="GO" VALUE="Click to go" onClick="navigate(this.form)">
 </FORM>
 </font>
 
@@ -1182,6 +1199,16 @@ Check out the ODOT District 9 Employee of the Month (August 97)</A>
 
 <p>You are visitor number 
 <a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter7.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=n9sxgcu1kkwa86nwbdh7kqfue4ehd6hg" border="0" title="free hit counter" alt="free hit counter"></a>
+</p>
+<p align=center>  Go to:  
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_1.html">  Page 1 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_2.html">  Page 2 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_3.html">  Page 3 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_4.html">  Page 4 </A>
 </p>
 <p><span style="background-color: #FFFF00">Thank you for visiting my site!</span></p> 
 <!---- Remove the following before uploading --->
