--- a/dave_1.html
+++ b/dave_1.html
@@ -9,6 +9,16 @@
 <BODY  background="Images/bg-bkgrd.gif" BGCOLOR="#A4C8F0">
 <center>
 <H1> Dr Dave's Favorite Pages 1</H1><P>
+    <p>  Go to:  
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_0.html">  Page 0 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_2.html">  Page 2 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_3.html">  Page 3 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_4.html">  Page 4 </A>
+        </p>
 </p><hr size=3 width=50%>
 <!---------------------->
 <P>
