--- a/dave_2.html
+++ b/dave_2.html
@@ -10,8 +10,18 @@
 <center>
 <P>
 <H1> Dr Dave's Favorite Pages 2</H1><P>
-
+    <p>  Go to:  
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_0.html">  Page 0 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_1.html">  Page 1 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_3.html">  Page 3 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_4.html">  Page 4 </A>
+    </p>
 <!---------------------->
+<hr size=3 width=50%>
 <p> <strong> INTERGRAPH / MICROSTATION </strong><br>
 <A href="http://www.ingr.com"> Intergraph </A> --
 <A href="http://www.ingr.com/bbs"> Intergraph BBS </A> --
