--- a/dave_3.html
+++ b/dave_3.html
@@ -9,8 +9,18 @@
 
 <center>
 <H1> Dr Dave's Favorite Pages 3</H1><P>
-
+    <p align=center>  Go to:  
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_0.html">  Page 0 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_1.html">  Page 1 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_2.html">  Page 2 </A>
+        <img align=absmiddle src="Images/blueball.gif">
+        <A href="dave_4.html">  Page 4 </A>
+        </p>
 <!---------------------->
+<hr size=3 width=50%>
 <p > <strong> EDUCATION </strong><br>
 <br>
 <A HREF="http://www.royal.gov.uk"> British Monarchy </A> --
