--- a/dave_4.html
+++ b/dave_4.html
@@ -11,7 +11,17 @@
 <P><center>
 <H1> Dr Dave's Favorite Pages 4 </H1><P>
 <!---------------------->
-<p > <strong> BIRDS </strong><br>
+<p align=center>  Go to:  
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_0.html">  Page 0 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_1.html">  Page 1 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_2.html">  Page 2 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_3.html">  Page 3 </A>
+    </p>
+    <p > <strong> BIRDS </strong><br>
 <A href="http://www.birdwatchersgeneralstore.com/"> BirdWatchers Store </A> --
 <A href="http://www.birdguides.com/"> Bird Guides </A> --
 <A href="http://www.hummingbirds.net/"> Lannys Hummers </A> --
