--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>from Lucasville, Ohio. Take a look at <A HREF="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KOHLUCAS2 "> Dave's Weather station </A> </p>
 
     Hello....My Name is <A href="dave.html">David </A> and I live in
-    <A href="Images/scioto.jpg">Southern Ohio </A> with my wife <A href="deb.html">Debra </A>
+    <A href="Images/scioto.jpg">Southern Ohio,</A> with my wife <A href="deb.html">Debra. </A>
     </p>
      See our <A href="ccf.html" target="_blank"> "adopted" children </A>
      <hr size=3 width=50%>
