--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
   <TITLE>Dr Dave's Webcam Page </TITLE>
-  <meta http-equiv="REFRESH" content="120">
+  <meta http-equiv="REFRESH" content="600">
   <link rel="icon" type="image/ico" href="favicon.ico"></link>
   <link rel="shortcut icon" href="favicon.ico"></link>
 </HEAD>
@@ -17,19 +17,16 @@
   <TR>
 
     <TD WIDTH="50%" bgcolor=red>
-    <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes
-    <IMG SRC="https://www.dnorris.net/webcam/webcam.jpg"
-    WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
-         
-    <BR><FONT FACE=Arial Size=2>
-    <A HREF="https://www.dnorris.net/webcam/webcam.jpg">Dave's Lucasville Cam</A></CENTER>
+    <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 5 minutes
+    <IMG SRC="https://www.dnorris.net/webcam/webcam.jpg"  WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
+         <BR><FONT FACE=Arial Size=2>
+    <A HREF="https://drive.google.com/open?id=1XuV7dU4NaRL1XCYStKG0nVNX3DyGpvaL">Dave's Lucasville Cam</A></CENTER>
     </TD>
 
     <TD WIDTH="50%" bgcolor=brown>
     <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every once in a while.
       <IMG SRC="https://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
-      <!----> IMG SRC="http://myplace.frontier.com/%7Eknorris06/webcam/webcam1.jpg" WIDTH="320" HEIGHT="240" ALIGN="BOTTOM"-->
-
+      <!-- IMG SRC="http://myplace.frontier.com/%7Eknorris06/webcam/webcam1.jpg" WIDTH="320" HEIGHT="240" ALIGN="BOTTOM"-->
          
     <BR><FONT FACE=Arial Size=2>
               <A HREF="https://myplace.frontier.com/~knorris06/webcam/cam.html"> Kevin's Byesville Cam</CENTER>
