--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -37,7 +37,7 @@
     <TD WIDTH="50%" bgcolor=orange>
     <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates twice a year.
     <!--IMG SRC="http://home.columbus.rr.com/nnorris/webcam/webcam.jpg"-->
-    <IMG SRC="https://www.dnorris.net/webcam/testpat.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
+    <IMG SRC="https://www.dnorris.net/webcam/testpattern.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
     <BR><FONT FACE=Arial Size=2>
       <A HREF="https://home.columbus.rr.com/nnorris/webcam/webcam.htm">Nelson's Marengo Cam</A></CENTER>
 
