--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -44,11 +44,12 @@
     </TD>
 
     <TD WIDTH="50%" bgcolor=blue>
-    <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates once in a blue moon.
-    <IMG SRC="https://home.netcom.com/~dnorris/cam/webcam.jpg"
-    WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM"><BR>
-    <FONT FACE=Arial Size=2>
-    <A HREF="https://home.netcom.com/~dnorris/cam/webcam.html">Dennis' MD Cam</A></CENTER></TD>
+      <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates once in a blue moon.
+      <!--IMG SRC="https://home.netcom.com/~dnorris/cam/webcam.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM"-->
+      <IMG SRC="/webcam/testpattern.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
+      <BR><FONT FACE=Arial Size=2>
+      <A HREF="https://home.netcom.com/~dnorris/cam/webcam.html">Dennis' MD Cam</A></CENTER>
+    </TD>
   </TR>
 </TABLE><BR>
 
