--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -35,15 +35,15 @@
   <TR>
 
     <TD WIDTH="50%" bgcolor=orange>
-      <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates twice a year.
+      <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=black>Image updates twice a year.
       <!--IMG SRC="http://home.columbus.rr.com/nnorris/webcam/webcam.jpg"-->
       <IMG SRC="https://www.dnorris.net/webcam/testpattern.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
       <BR><FONT FACE=Arial Size=2>
       <A HREF="https://home.columbus.rr.com/nnorris/webcam/webcam.htm">Nelson's Marengo Cam</A></CENTER>
     </TD>
 
-    <TD WIDTH="50%" bgcolor=blue>
-      <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=white>Image updates once in a blue moon.
+    <TD WIDTH="50%" bgcolor=lime>
+      <P><CENTER>&nbsp;<FONT FACE=Arial Size=2 color=black>Image updates once in a blue moon.
       <!--IMG SRC="https://home.netcom.com/~dnorris/cam/webcam.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM"-->
       <IMG SRC="/webcam/testpattern.jpg" WIDTH="320" HEIGHT="240" NATURALSIZEFLAG="0" ALIGN="BOTTOM">
       <BR><FONT FACE=Arial Size=2 color=white>
@@ -51,7 +51,6 @@
     </TD>
   </TR>
 </TABLE><BR>
-
     
 </BODY>
 </HTML>
